Improve Gmail API authentication: better error handling for deployment environment

--- a/login.html
+++ b/login.html
@@ -169,7 +169,11 @@
                         throw new Error(loginData.error || '로그인에 실패했습니다.');
                     }
                 } else {
-                    throw new Error('Gmail 인증이 필요합니다. 브라우저 팝업을 확인해주세요.');
+                    if (authData.setup_required) {
+                        throw new Error('Gmail API 설정이 필요합니다. 환경변수 GOOGLE_CREDENTIALS를 설정해주세요.');
+                    } else {
+                        throw new Error('Gmail 인증이 필요합니다. 로컬 환경에서 먼저 인증을 완료하거나, 환경변수에 토큰을 설정해주세요.');
+                    }
                 }
                 
             } catch (error) {
